Finished project and completed report

--- a/credit_risk_classification.ipynb
+++ b/credit_risk_classification.ipynb
@@ -616,7 +616,7 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** The model was quite successful at predicting the healthy and high risk loan-labels but was overall less successful at predicting high-risk loans than healthy loans.  It was over 94% accurate overall and correctly predicted 87% of the high-risk loans correctly while predicting over 99% of the healthy loans correctly.  This is likely because it trained on a dataset with mostly healthy loans and therefore has a bias."
+    "**Answer:** The model was quite successful at predicting the healthy and high risk loan-labels but was overall less successful at predicting high-risk loans than healthy loans.  It had a balanced accuracy score of 94.4% and an overall accuracy score of over 99% and correctly predicted 87% of the high-risk loans correctly while predicting over 99% of the healthy loans correctly.  Also, over 99% of the loans that were actually healthy were classified as healthy, and 89% of the loans that were high-risk were classified as high-risk.  The most likely reason the model was most successful with classifying healthy loans as opposed to high-risk loans was because it trained on a dataset with mostly healthy loans and therefore has a bias."
    ]
   },
   {
@@ -799,7 +799,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** The logistic regression model was successful at predicting healthy and high risk loans with the oversampled data.  As with the previous model, it was more successful at predicting healthy-loans than high-risk loans even though the data was resampled to be even.  The overall accuracy was over 99% and the model classified 87% of the high-risk loans correctly and over 99% of the healthy loans correctly.  The amount of false negatives is very small but there are still a fair amount of false positives."
+    "**Answer:** The logistic regression model was successful at predicting healthy and high risk loans with the oversampled data.  As with the previous model, it was more successful at predicting healthy-loans than high-risk loans even though the data was resampled to be even.  The balanced accuracy and overall accuracy was over 99% and the model classified 87% of the high-risk loans correctly and over 99% of the healthy loans correctly.  Over 99% of the loans that were healthy were classified as healthy, over 99% of the loans that were high-risk were classified as high-risk.  The amount of false negatives is very low which is good being that it would cause less of a risk of identifying a risky loan as healthy."
    ]
   }
  ],
